added example of arithmetics